--- a/index.html
+++ b/index.html
@@ -60,8 +60,32 @@
 	<!-- End Section Top -->
 
 	<!-- Section Middle -->
-	<section>
-		
+	<section class="alt_container">
+		<section class="middle_part">
+			<div class="left_content">
+				<div class="post_image">
+					<img src="img/band.jpg">
+					<div class="post_desc">
+						<div class="post_title">
+							<div>
+								<strong>The Blue Train - Saturdays 9-10pm.</strong>
+								<span>A 60-minute music flow celebrating the 80th anniversary of Bluenote.</span>
+							</div>
+							<div class="post_nav">
+								<div class="button_wrapper">
+									<button id="left"> < </button>
+									<button id="right"> > </button>
+								</div>
+							</div>
+							<div class="number_wrapper">
+								<small>1/3</small>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="right_content"></div>
+		</section>
 	</section>
 	<!-- End Section Middle -->
 
