logo added and bg color

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 			<div class="live_part">
 				<div class="logo">
-					<img src="img/jazzfm.png">
+					 <img src="img/nyami.png">
 				</div>
 				<div class="listen_live">
 					<ul>
@@ -23,16 +23,23 @@
 					</ul>
 				</div>
 				<div class="sign_up">
-					<label class="sign_up_title">The Jazzclub</label>
+					<label class="sign_up_title">The FishersClub</label>
 					<form>
-						<ul>
+						<div class="container_input">
+							<label>Email</label><input type="email" name="email">
+						</div>
+						<div class="container_input">
+							<label>Password</label><input class="password_in" type="password" name="password">
+							<button type="submit" name="submit" value="Log In">Log In</button>
+						</div>
+<!-- 						<ul>
 							<li><label class="sign_up_label">Email</label><input type="email" name="email"></li>
 							<li><label class="sign_up_label">Password</label><input type="password" name="password"></li>
 							<li>
 								<button class="submit_" type="submit" name="submit" value="Log In">Log In</button>
 								<button type="submit" name="register" value="Sign Up">Sign Up</button>
 							</li>
-						</ul>
+						</ul> -->
 					</form>
 				</div>
 			</div>
@@ -64,12 +71,12 @@
 		<section class="middle_part">
 			<div class="left_content">
 				<div class="post_image">
-					<img src="img/band.jpg">
+					<img src="img/sastars.jpg">
 					<div class="post_desc">
 						<div class="post_title">
 							<div>
-								<strong>The Blue Train - Saturdays 9-10pm.</strong>
-								<span>A 60-minute music flow celebrating the 80th anniversary of Bluenote.</span>
+								<strong>South African stars for Tuku gig</strong>
+								<span>Steve Dyer and Berita Khumalo, are expected to headline events...</span>
 							</div>
 							<div class="post_nav">
 								<div class="button_wrapper">
