--- a/index.html
+++ b/index.html
@@ -5,97 +5,212 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-	<!-- Section Top -->
-	<section class="top_section">
-		<div class="wrapper_top">
-			<div class="ad_top">
-				<img src="https://via.placeholder.com/728x90">
-			</div>
+	<div class="container">
+		<!-- Section Top -->
+		<section class="top_section">
+			<div class="wrapper_top">
+				<div class="ad_top">
+					<img src="https://via.placeholder.com/728x90">
+				</div>
 
-			<div class="live_part">
-				<div class="logo">
-					 <img src="img/nyami.png">
+				<div class="live_part">
+					<div class="logo">
+						 <img src="img/nyami.png">
+					</div>
+					<div class="listen_live">
+						<ul>
+							<li class="listen_button">Listen Live</li>
+							<li class="catch_up">Catch Up</li>
+						</ul>
+					</div>
+					<div class="sign_up">
+						<label class="sign_up_title">The FishersClub</label>
+						<form>
+							<div class="container_input">
+								<label>Email</label><input type="email" name="email">
+							</div>
+							<div class="container_input">
+								<label>Password</label><input class="password_in" type="password" name="password">
+								<button type="submit" name="submit" value="Log In">Log In</button>
+							</div>
+						</form>
+					</div>
 				</div>
-				<div class="listen_live">
-					<ul>
-						<li class="listen_button">Listen Live</li>
-						<li class="catch_up">Catch Up</li>
-					</ul>
-				</div>
-				<div class="sign_up">
-					<label class="sign_up_title">The FishersClub</label>
-					<form>
-						<div class="container_input">
-							<label>Email</label><input type="email" name="email">
-						</div>
-						<div class="container_input">
-							<label>Password</label><input class="password_in" type="password" name="password">
-							<button type="submit" name="submit" value="Log In">Log In</button>
-						</div>
-<!-- 						<ul>
-							<li><label class="sign_up_label">Email</label><input type="email" name="email"></li>
-							<li><label class="sign_up_label">Password</label><input type="password" name="password"></li>
-							<li>
-								<button class="submit_" type="submit" name="submit" value="Log In">Log In</button>
-								<button type="submit" name="register" value="Sign Up">Sign Up</button>
-							</li>
-						</ul> -->
-					</form>
-				</div>
-			</div>
 
-			<div class="top_menu">
-				<div class="_menu">
-					<ul>
-						<li>Home</li>
-						<li>News</li>
-						<li>Win</li>
-						<li>Music</li>
-						<li>Events</li>
-						<li>Awards</li>
-						<li>Contact</li>
-					</ul>
-				</div>
-				<div class="search">
-					<form class="search_form">
-						<input type="text" name="search" value="" placeholder="Search">
-					</form>
-				</div>
-			</div>
-	</div>
-	</section>
-	<!-- End Section Top -->
-
-	<!-- Section Middle -->
-	<section class="alt_container">
-		<section class="middle_part">
-			<div class="left_content">
-				<div class="post_image">
-					<img src="img/sastars.jpg">
-					<div class="post_desc">
-						<div class="post_title">
-							<div>
-								<strong>South African stars for Tuku gig</strong>
-								<span>Steve Dyer and Berita Khumalo, are expected to headline events...</span>
-							</div>
-							<div class="post_nav">
-								<div class="button_wrapper">
-									<button id="left"> < </button>
-									<button id="right"> > </button>
-								</div>
-							</div>
-							<div class="number_wrapper">
-								<small>1/3</small>
-							</div>
-						</div>
+				<div class="top_menu">
+					<div class="_menu">
+						<ul>
+							<li>Home</li>
+							<li>News</li>
+							<li>Win</li>
+							<li>Music</li>
+							<li>Events</li>
+							<li>Awards</li>
+							<li>Contact</li>
+						</ul>
+					</div>
+					<div class="search">
+						<form class="search_form">
+							<input type="text" name="search" value="" placeholder="Search">
+						</form>
 					</div>
 				</div>
 			</div>
-			<div class="right_content"></div>
 		</section>
-	</section>
-	<!-- End Section Middle -->
+		<!-- End Section Top -->
+		
+		<!-- Section Middle -->
+		<section class="alt_container">
+			<section class="middle_part">
+				<!-- Left Content -->
+				<div class="left_content">
+					<div class="post_image">
+						<img src="img/sastars.jpg">
+						<div class="post_desc">
+							<div class="post_title">
+								<div>
+									<strong>South African stars for Tuku gig</strong>
+									<span>Steve Dyer and Berita Khumalo, are expected to headline events...</span>
+								</div>
+								<div class="post_nav">
+									<div class="button_wrapper">
+										<button id="left"> < </button>
+										<button id="right"> > </button>
+									</div>
+								</div>
+								<div class="number_wrapper">
+									<small>1/3</small>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- Music News Section -->
+					<div class="music_content">
+						<h2><i></i><a href="">Music News</a></h2>
+						<div class="music_posts">
+							<ul>
+								<li>
+									<article>
+										<a href="">
+											<img src="img/baba.jpg">
+											<strong>Dirty lyrics could make or break singer</strong>
+										</a>
+										<p>Jiti singer Baba Harare could have shot himself in the foot through his sexually suggestive lyrics and raunchy dances</p>
+									</article>
+								</li>
+								<li>
+									<article>
+										<a href="">
+											<img src="img/baba.jpg">
+											<strong>Dirty lyrics could make or break singer</strong>
+										</a>
+										<p>Jiti singer Baba Harare could have shot himself in the foot through his sexually suggestive lyrics and raunchy dances</p>
+									</article>
+								</li>
+								<li>
+									<article>
+										<a href="">
+											<img src="img/baba.jpg">
+											<strong>Dirty lyrics could make or break singer</strong>
+										</a>
+										<p>Jiti singer Baba Harare could have shot himself in the foot through his sexually suggestive lyrics and raunchy dances</p>
+									</article>
+								</li>
+							</ul>
+						</div>
+					</div>
+					<!-- End Music News Section -->
+					<!-- This Week Section -->
+					<div class="music_content">
+						<h2><i></i><a href="">This Week on NyamiNyamiFM</a></h2>
+						<div class="music_posts">
+							<ul>
+								<li>
+									<article>
+										<a href="">
+											<img src="img/chifumofumo.jpg">
+										</a>
+									</article>
+								</li>
+								<li>
+									<article>
+										<a href="">
+											<img src="img/sunset.jpg">
+										</a>
+									</article>
+								</li>
+								<li>
+									<article>
+										<a href="">
+											<img src="img/mutsikadova.jpg">
+										</a>
+									</article>
+								</li>
+							</ul>
+						</div>
+					</div>
+					<!-- End Music News Section -->
+				</div>
+				<!-- End Left Content -->
+				<div class="right_content">
+					<div class="on_air"></div>
+					<div class="now_playing"></div>
+					<div class="right_top_ad"></div>
+					<div class="social_links"></div>
+				</div>
+			</section>
+		</section>
+		<!-- End Section Middle -->
 
-
+		<!-- Section Bottom -->
+		<footer>
+			<div class="footer_wrapper">
+				<div>
+					<h3>How to Listen</h3>
+					<ul>
+						<li>Radio Stream</li>
+						<li>Radio Stream</li>
+						<li>Radio Stream</li>
+						<li>Radio Stream</li>
+						<li>Radio Stream</li>
+					</ul>
+				</div>
+				<div>
+					<h3>On Air</h3>
+					<ul>
+						<li>Radio Air</li>
+						<li>Radio Air</li>
+						<li>Radio Air</li>
+						<li>Radio Air</li>
+						<li>Radio Air</li>
+					</ul>
+				</div>
+				<div>
+					<h3>Explore</h3>
+					<ul>
+						<li>Radio Explore</li>
+						<li>Radio Explore</li>
+						<li>Radio Explore</li>
+						<li>Radio Explore</li>
+						<li>Radio Explore</li>
+					</ul>
+				</div>
+				<div>
+					<h3>About NyamiNyamiFM</h3>
+					<ul>
+						<li>Radio FM</li>
+						<li>Radio FM</li>
+						<li>Radio FM</li>
+						<li>Radio FM</li>
+						<li>Radio FM</li>
+					</ul>
+				</div>
+			</div>
+			<div class="copyright">
+				<p>Copyright NyaminyamiFM &copy; 2019</p>
+			</div>
+		</footer>
+		<!-- End Section Bottom -->
+	</div>
 </body>
 </html>
