edited the sidebar top part

--- a/index.html
+++ b/index.html
@@ -153,8 +153,37 @@
 				</div>
 				<!-- End Left Content -->
 				<div class="right_content">
-					<div class="on_air"></div>
-					<div class="now_playing"></div>
+					<div class="on_air">
+						<div class="on_air_text">
+							<ul>
+								<li class="on_air_tag">
+									<h2>
+										<strong>On Air</strong>
+										<time>0900 - 1200 HRS</time>
+									</h2>
+								</li>
+								<li class="presenter_details">
+									<h2>Masaisai aZambezi with Dr Coffee</h2>
+									<span>Celebrating the romantic and sentimental side of jazz, soul and blues</span>
+								</li>
+								<li class="presenter_actions">
+									<a class="button" href=""><i></i>Email</a>
+									<button class="button">On Air Next <i></i></button>
+								</li>
+							</ul>
+						</div>
+						<div class="on_air_thumb">
+							<img src="img/coffee.jpg">
+						</div>
+					</div>
+					<div class="now_playing">
+						<h2><i></i><a href="">Now Playing</a></h2>
+						<ul>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+					</div>
 					<div class="right_top_ad"></div>
 					<div class="social_links"></div>
 				</div>
