several changes to the homepage ads

--- a/index.html
+++ b/index.html
@@ -50,9 +50,14 @@
 						</ul>
 					</div>
 					<div class="search">
-						<form class="search_form">
-							<input type="text" name="search" value="" placeholder="Search">
-						</form>
+						<div class="search_box">
+							<form class="search_form">
+								<input type="text" name="search" value="" placeholder="Search">
+								<button type="submit">Go</button>
+							</form>
+						</div>
+						<div class="weather">
+						</div>
 					</div>
 				</div>
 			</div>
@@ -122,7 +127,7 @@
 					<!-- End Music News Section -->
 					<!-- This Week Section -->
 					<div class="music_content">
-						<h2><i></i><a href="">This Week on NyamiNyamiFM</a></h2>
+						<h2><i></i><a href="">Latest Podcasts</a></h2>
 						<div class="music_posts">
 							<ul>
 								<li>
@@ -179,13 +184,34 @@
 					<div class="now_playing">
 						<h2><i></i><a href="">Now Playing</a></h2>
 						<ul>
-							<li></li>
-							<li></li>
-							<li></li>
+							<li>
+								<h3 class="play_now">Now</h3>
+								<span>Thomas Mapfumo - Nhungetunge</span>
+								<a class="download" href="">Download<i></i></a>
+							</li>
+							<li>
+								<h3>06:49</h3>
+								<span>Oliver Mtukudzi - Todii</span>
+								<a href="">Download<i></i></a>
+							</li>
+							<li>
+								<h3>06:44</h3>
+								<span>Betty Makaya - Ndakusuwa</span>
+								<a href="">Download<i></i></a>
+							</li>
 						</ul>
 					</div>
-					<div class="right_top_ad"></div>
-					<div class="social_links"></div>
+					<div class="social_links">
+						<h3>Get Connected</h3>
+						<ul>
+							<li><img src="img/facebook.png"></li>
+							<li><img src="img/twitter.png"></li>
+							<li><img src="img/instagram.png"></li>
+						</ul>
+					</div>
+					<div class="right_top_ad">
+						<img src="img/ad_top.png">
+					</div>
 				</div>
 			</section>
 		</section>
